# pixtaggers-bot

./: .gitignore  LICENSE  README.md  config.example.json  main.py  pyproject.toml
pixtaggers/: camiedetect.py  discordhook.py  img_helpers.py  onnx_session.py  schema.py  szurubooru.py  video_frames.py
pixtaggers/models/: README.md
